# aruco_tracker

./: .gitignore  .gitmodules  CMakeLists.txt  app.cpp  app_calibration.cpp  arucoConfig.yml  aruco_print_dictionary.cpp  aruco_test_markermap.cpp  board_config.yml  camera_params.yml  markerset.yml  publisher.cpp  sglviewer.h  subscriber.cpp  testasio.cpp
aruco/utils_markermap/: aruco_create_markermap.cpp  sglviewer.h
backup/: aruco_test_markermap.cpp
img/: Untitled.ipynb  combine.py
marker_mapper/: CMakeSettings.json
marker_mapper/utils/: mapper_from_video.cpp
py/: marker_map_tracker.py  process_markermap.py  track_marker.py
saved_config/: README.md  board_config.yml  camera_params.yml  markerset.yml
